--- a/wp-content/themes/pourtales-theme/sass/style.scss
+++ b/wp-content/themes/pourtales-theme/sass/style.scss
@@ -17,10 +17,9 @@
 @import 'contact/contact.scss';
 @import 'forfait/forfait_single_page.scss';
 
-body{
-  font-family: 'Raleway', sans-serif;
-  overflow-x: hidden;
-}
-a{
-  text-decoration: none!important;
-}
+
+
+
+
+// liens
+a{ text-decoration: none!important; }
