--- a/wp-content/themes/pourtales-theme/sass/contact/_slider-contact.scss
+++ b/wp-content/themes/pourtales-theme/sass/contact/_slider-contact.scss
@@ -31,6 +31,10 @@ div.container-slider-contact{
               color: $color-secondary;
               background-color: $color-white;
             }
+            a.cta-reserver:hover{
+              color: $color-secondary;
+              background-color: $color-primary;
+            }
             p.city{
               margin-top:13%;
               padding-bottom: 5%;
