--- a/wp-content/themes/pourtales-theme/sass/histoire/_historique.scss
+++ b/wp-content/themes/pourtales-theme/sass/histoire/_historique.scss
@@ -1,9 +1,9 @@
+//desktop
 div.container-historique{
   color: $color-secondary;
   div.title-historique{
     text-align: center;
     margin-top: 3%;
-
     img.icon-losange{
       width: 90px;
       height: 90px;
@@ -29,7 +29,6 @@ div.container-historique{
     img{
       width: 40%;
     }
-
     p.text-historique{
       width: 40%;
       font-size: 16px;
@@ -39,7 +38,6 @@ div.container-historique{
   div.content-points{
     display: flex;
     padding: 0 10% 80px 4%;
-
     img.deco-losange{
       width: 20px;
       height: 20px;
@@ -51,7 +49,6 @@ div.container-historique{
       }
       p.text-points{
         font-size: 17px;
-
       }
     }
     div.slider-missions{
@@ -75,14 +72,10 @@ div.container-historique{
       padding: 30px 30px 30px 30px;
       p{
         font-size: 17px;
-
       }
-
     }
   }
 }
-
-
 
 // à partir de 1380px
 @media screen and (max-width: 1380px){
@@ -94,19 +87,14 @@ div.container-historique{
       display: block;
       margin: 0 auto;
       text-align: center;
-
       img{
         width: 50%;
       }
-
       p.text-historique{
         text-align: left;
         margin: 0 auto;
         width: 93%;
       }
     }
-
   }
-
-
 }
