--- a/wp-content/themes/pourtales-theme/sass/histoire/_slider-histoire.scss
+++ b/wp-content/themes/pourtales-theme/sass/histoire/_slider-histoire.scss
@@ -31,6 +31,9 @@ div.container-slider-histoire{
               color: $color-secondary;
               background-color: $color-white;
             }
+            a.cta-reserver:hover{
+              background-color: $color-primary;
+            }
             p.city{
               margin-top:13%;
               padding-bottom: 5%;
@@ -65,7 +68,6 @@ div.container-slider-histoire{
   }
   }
 }
-
 
 // à partir de 900px
 @media screen and (max-width: 900px){
